force-app/main/default/objects/Naver_Setting__mdt/Naver_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Naver Setting</label>
    <pluralLabel>Naver Settings</pluralLabel>
</CustomObject>