force-app/main/default/objects/Naver_Setting__mdt/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <description>네이버 뉴스 수집 최종 실패 시 알림을 받을 관리자 이메일 주소.</description>
    <inlineHelpText>수집 실패 알림을 받을 관리자 이메일 주소를 입력하세요.</inlineHelpText>
    <label>관리자 이메일</label>
    <type>Email</type>
</CustomField>