force-app/main/default/objects/Naver_Setting__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>네이버 검색 OpenAPI 호출 시 X-Naver-Client-Secret 헤더로 전달하는 애플리케이션 클라이언트 시크릿.</description>
    <inlineHelpText>네이버 개발자센터에서 발급받은 Client Secret을 입력하세요.</inlineHelpText>
    <label>클라이언트 시크릿</label>
    <length>100</length>
    <type>Text</type>
</CustomField>