force-app/main/default/objects/Naver_Setting__mdt/fields/Max_Retry__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry__c</fullName>
    <description>일시적 오류(타임아웃/5xx/429) 발생 시 수집을 재시도할 최대 횟수.</description>
    <inlineHelpText>재시도 최대 횟수를 입력하세요. 예: 3</inlineHelpText>
    <label>최대 재시도 횟수</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>